# kf-sim

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
data/: sim.cfg
scripts/: plot
src/common/: AnsiCodes.h
src/kf/: CMakeLists.txt  CircleVehicle.cpp  CircleVehicle.h  ExtendedKalmanFilter.h  FileOutput.h  IMUSensor6D.cpp  IMUSensor6D.h  KalmanFilter.h  KalmanFilterFactory.h  KalmanFilterInterface.h  MultiOutput.h  OutputFactory.h  OutputInterface.h  PositionDepthSensor.cpp  PositionDepthSensor.h  ProgressReporter.h  SensorPreprocessor.cpp  SensorPreprocessor.h  SensorPreprocessorInterface.h  StationaryVehicle.cpp  StationaryVehicle.h  Types.h  VehicleTruthModel.h  VehicleTruthModelFactory.cpp  VehicleTruthModelFactory.h  main.cpp
test/: CMakeLists.txt  test_CircleVehicle.cpp  test_IMUSensor6D.cpp  test_SensorPreprocessor.cpp  test_StationaryVehicle.cpp
